<resources>
    <!--Inicio-->
    <string name="app_name">ParkingYa!</string>

    <!--Login del usuario-->
    <string name="userEdTxtLogin">Email:</string>
    <string name="passEdTxtLogin">Contraseña:</string>
    <string name="regTextLogin">No tienes cuenta aún? Crea una ahora!</string>
    <string name="enterBtnLogin">Ingresar</string>

    <!--Registro del usuario-->
    <string name="regNameUser">Nombres y apellidos</string>
    <string name="regEmailUser">Email</string>
    <string name="regPassUser">Contraseña</string>
    <string name="regAgeUser">Edad</string>
    <string name="regAddressUser">Dirección</string>
    <string name="regPhoneUser">Telefono</string>
    <string name="regBtnRegistroUser">Registrarse</string>

    <!--Map-->

    <string name="title_activity_parking_maps">Map Parking Ya!</string>
    <string name="infoWindowTextView">Nombres de Parqueaderos:</string>
    <string name="infoWindowSnippetView">Capacidad:</string>

    <string name="reservasDialog">¿Esta seguro que quiere parquear su vehiculo aqui?</string>

    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>


</resources>


    <!-- Crear accesos directos
    <string name="shortlabel1">Login</string>
    <string name="longlabel1">Abrir Login</string>
    <string name="disabledmessage1">Desactivado</string>

    <string name="shortlabel2">Registro</string>
    <string name="longlabel2">Abrir Registro</string>
    <string name="disabledmessage2">Desactivado</string>-->



