<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/RegistroCapa"
    tools:context=".RegistroMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/gradientbackground"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgViewRegisUser"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/userregister" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_reg_name"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_RegNombre"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:drawableLeft="@drawable/ic_action_user"
                    android:drawablePadding="4dp"
                    android:ems="10"
                    android:hint="@string/regNameUser"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_reg_email"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_RegCorreo"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:drawableLeft="@drawable/ic_action_email"
                    android:drawablePadding="4dp"
                    android:ems="10"
                    android:hint="@string/regEmailUser"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_reg_pass"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_RegConstraseña"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:drawableLeft="@drawable/ic_action_pass"
                    android:drawablePadding="4dp"
                    android:ems="10"
                    android:hint="@string/regPassUser"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_reg_address"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_RegDireccion"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:drawableLeft="@drawable/ic_action_addressreg"
                    android:drawablePadding="4dp"
                    android:ems="10"
                    android:hint="@string/regAddressUser"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_reg_age"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_RegEdad"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:drawableLeft="@drawable/ic_action_birthreg"
                    android:drawablePadding="4dp"
                    android:ems="10"
                    android:hint="@string/regAgeUser"
                    android:inputType="text|date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_reg_tel"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_RegTel"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:drawableLeft="@drawable/ic_action_phonereg"
                    android:drawablePadding="4dp"
                    android:ems="10"
                    android:hint="@string/regPhoneUser"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_RegistUser"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="40dp"
                android:background="@drawable/buttonstylegradientregister"
                android:text="@string/regBtnRegistroUser"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#fff"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>